cfn_benchmark/cfn_templates/Tianyi2__IRIS/data__cloudformation_collected_templates_new__template_03909_db-template.yaml
Description: |
  This template provisions an Amazon RDS (Relational Database Service) instance
  in a multi-Availability Zone (AZ) setup within a DB subnet group.
  The RDS instance is configured with the specified database engine (MySQL),
  security groups, and other parameters.

Parameters:
  Az1:
    Type: AWS::EC2::AvailabilityZone::Name
    Default: us-east-2a  # Default Availability Zone

  DBUsername:
    Description: Enter a username to be used with the RDS database
    Type: String
    Default: admin

  DBPassword:
    Description: Enter a password to be used with the RDS database
    Type: String
    Default: password

Resources:
  # Create a DB subnet group for RDS
  DBSubnetGroup:
    Type: AWS::RDS::DBSubnetGroup
    Properties:
      DBSubnetGroupDescription: Subnet group for RDS
      DBSubnetGroupName: db_subnet_group
      SubnetIds:
        - !ImportValue 3tier-PrivateDBSubnet1
        - !ImportValue 3tier-PrivateDBSubnet2

  # Create a security group for the RDS instance
  DBTierSecurityGroup:
    Type: AWS::EC2::SecurityGroup
    Properties:
      GroupDescription: My DB Security Group
      VpcId: !ImportValue 3tier-VPC
      SecurityGroupIngress:
        - CidrIp: 0.0.0.0/0
          IpProtocol: tcp
          FromPort: 3306
          ToPort: 3306

  # Authorize inbound traffic from the PHP Server's security group
  MyDBSecurityGroupIngress:
    Type: "AWS::EC2::SecurityGroupIngress"
    Properties:
      GroupId: !GetAtt DBTierSecurityGroup.GroupId
      IpProtocol: tcp
      FromPort: 3306
      ToPort: 3306
      SourceSecurityGroupId: !ImportValue 3tier-PHPServer1SecurityGroup

  # Create the RDS instance
  RDSInstance:
    Type: AWS::RDS::DBInstance
    Properties:
      DBName: mydatabase
      AvailabilityZone: !Ref Az1
      DBInstanceClass: db.t3.micro
      DBSubnetGroupName: !Ref DBSubnetGroup
      VPCSecurityGroups: [!Ref DBTierSecurityGroup]
      Engine: mysql
      MultiAZ: false
      PubliclyAccessible: false
      StorageType: gp2
      MasterUsername: !Ref DBUsername
      MasterUserPassword: !Ref DBPassword
      AllocatedStorage: 20
      MaxAllocatedStorage: 22
